# SeaHorse

./: .gitignore  .gitmodules  DataStore.cpp  GuiComponents.cpp  Makefile  Makefile.config  README.md  SeaHorseGui.h  bc4_init.sh  gui.cpp  main.cpp  test.json
.github/workflows/: makefile.yml
gui/: GuiComponents.cpp  eigenspectrum.rgl  evolution.rgl  gui.cpp  performance.rgl  settings.rgl
include/: Globals.h  Hamiltonian.cpp  Hamiltonian.h  HilbertSpace.cpp  HilbertSpace.h  Random.h  Renderers.h  Solvers.cpp  Solvers.h  Vectors.cpp  Vectors.h  globals.cpp  random.cpp  renderers.cpp  seahorse.h
libs/matplotlib/: matplotlibcpp.h
libs/old/eigen/Eigen/src/Core/arch/Default/: Half.h
libs/raylib/: raygui.h
libs/seahorse/: seahorse.h
libs/seahorse/include/: Basis.h  Globals.h  Hamiltonian.h  HilbertSpace.h  Optimiser.h  Random.h  SplitStepper.h  Stepper.h  Steppers.h  Vectors.h  dCRAB.h  seahorse.h
libs/seahorse/include/Optimisation/: Basis.h  Cost.h  Optimiser.h  Stopper.h  dCRAB.h
libs/seahorse/include/Optimisation/Cost/: ControlCost.h  Cost.h  EvaluatedControl.h  StateTransferCost.h
libs/seahorse/include/Optimisation/Stopper/: StopComponent.h  Stopper.h
libs/seahorse/include/Physics/: Hamiltonian.h  HilbertSpace.h  SplitStepper.h  Stepper.h
libs/seahorse/include/Utils/: Globals.h  Random.h  Saver.h
libs/seahorse/src/: Basis.cpp  Globals.cpp  GuiComponents.cpp  Hamiltonian.cpp  HilbertSpace.cpp  Optimiser.cpp  Random.cpp  SplitStepper.cpp  Stepper.cpp  Steppers.cpp  Vectors.cpp  dCRAB.cpp  seahorse.cpp
libs/seahorse/src/Optimisation/: Basis.cpp  Cost.cpp  Optimiser.cpp  Stopper.cpp  dCRAB.cpp
libs/seahorse/src/Optimisation/Cost/: ControlCost.cpp  Cost.cpp  StateTransferCost.cpp
libs/seahorse/src/Optimisation/Stopper/: StopComponent.cpp  Stopper.cpp
libs/seahorse/src/Physics/: Hamiltonian.cpp  HilbertSpace.cpp  SplitStepper.cpp  Stepper.cpp  Vectors.cpp
libs/seahorse/src/Utils/: Random.cpp
projects/: gkp_states.cpp  main.cpp  test.cpp
seahorse/: CMakeLists.txt  seahorse.cpp  seahorse.h  seahorse.hpp
seahorse/include/Optimisation/: Optimiser.h  Optimiser.hpp  dCRAB.h  dCRAB.hpp
seahorse/include/Optimisation/Basis/: Basis.h  Basis.hpp
seahorse/include/Optimisation/Cost/: ControlCost.h  ControlCost.hpp  Cost.h  Cost.hpp  EvaluatedControl.h  EvaluatedControl.hpp  StateTransferCost.h  StateTransferCost.hpp
seahorse/include/Optimisation/Stopper/: StopComponent.h  StopComponent.hpp  Stopper.h  Stopper.hpp
seahorse/include/Physics/: Hamiltonian.h  Hamiltonian.hpp  HilbertSpace.h  HilbertSpace.hpp  Potential.hpp  Spline.hpp  SplitStepper.h  SplitStepper.hpp  Stepper.h  Stepper.hpp  Vectors.hpp  spline.h
seahorse/include/Utils/: Globals.h  Globals.hpp  Random.hpp  Timer.hpp  incbin.hpp
seahorse/lib/: seahorse.cpp
seahorse/src/DataContainer/: DataContainer.hpp
seahorse/src/Optimisation/: Optimiser.cpp  dCRAB.cpp
seahorse/src/Optimisation/Basis/: Basis.cpp
seahorse/src/Optimisation/Cost/: ControlCost.cpp  Cost.cpp  StateTransferCost.cpp
seahorse/src/Optimisation/Stopper/: StopComponent.cpp  Stopper.cpp
seahorse/src/Physics/: Hamiltonian.cpp  HilbertSpace.cpp  Potential.cpp  Spline.cpp  SplitStepper.cpp  Stepper.cpp  Vectors.cpp  Vectors.hpp
seahorse/src/Utils/: Includer.hpp  Logger.hpp  Random.cpp  Timer.cpp
